--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,22 @@ version: '3'
 services:
   pizzaria:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/usr/src/app/
     ports:
       - 8000:8000
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_DB=pizzaria
+      - POSTGRES_USER=pizzaiolo
+      - POSTGRES_PASSWORD=segredo
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
 volumes:
-  pizzaria:
+  postgres_data:
