--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   pizzaria:
     build: .
     restart: always
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "sh start.sh"
     volumes:
       - ./app:/usr/src/app
     env_file:
@@ -14,6 +14,7 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - rabbitmq
     networks:
       - backend
   db:
